Improved the reading page on mobile devices by aligning the drop down menu such that it stays left of the dropdown caret (which ensures it stays on screen). I also shortened the editor description on phones so that it can reliably be displayed on a single screen.
Closes #553.

--- a/trunk/src/media/stylesheets/app.scss
+++ b/trunk/src/media/stylesheets/app.scss
@@ -81,6 +81,14 @@ footer .addthis_toolbox {
 	margin-left: -1px;
 }
 
+/* See http://forrst.com/posts/Bootstrap_right_positioned_dropdown-2KB */
+.dropdown-menu.right {
+	left: auto;
+	right: 0;
+    &::before {left:auto !important; right:9px;}
+    &::after {left:auto !important; right:10px;}
+}
+
 /*
  * Below are some fixes for Darkstrap
  */
